# clide

./: .gitignore  Cargo.toml  README.md  build.rs  resources.qrc
.cargo/: config.toml
.gitea/workflows/: build.yaml
.github/actions/setup-qt/: action.yml
.github/workflows/: build.yaml  check.yaml
libclide/: Cargo.toml
libclide/src/: fs.rs  lib.rs
libclide/src/fs/: entry_meta.rs
qml/: ClideAboutWindow.qml  ClideApplicationView.qml  ClideEditor.qml  ClideEditorView.qml  ClideExplorerView.qml  ClideMenuBar.qml  ClideProjectView.qml  ClideTreeView.qml  main.qml
qml/Components/: ClideAboutWindow.qml  ClideBreadCrumbs.qml  ClideEditor.qml  ClideHandle.qml  ClideLogger.qml  ClideMenu.qml  ClideMenuBar.qml  ClideMenuItem.qml  ClideScrollBar.qml  qmldir
qml/Logger/: Logger.qml
qml/Menu/: ClideMenu.qml  ClideMenuBar.qml  ClideMenuBarItem.qml
src/: gui.rs  main.rs  tui.rs
src/gui/: colors.rs  filesystem.rs
src/tui/: about.rs  app.rs  component.rs  editor.rs  editor_tab.rs  explorer.rs  logger.rs  menu_bar.rs
